--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,5 @@
-$primary-color: #3498db;
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: $primary-color;
-  color: white;
-  text-align: center;
-  margin-top: 50px;
-}
+@import "../partials/config";
+@import "../partials/mixins";
+@import "../partials/general";
+@import "../partials/nav";
+@import "../partials/hero";
