--- a/partials/_general.scss
+++ b/partials/_general.scss
@@ -18,20 +18,28 @@ ul {
 a {
   text-decoration: none;
 }
+button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+p {
+  font-size: 14px;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+/////////////////////////// GENERAL STYLE
+.btn {
+  @include button;
+}
 .section-center {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .container {
   width: 90%;
   max-width: 1200px;
   margin: auto;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 5);
-  display: none;
 }
