--- a/partials/_hero.scss
+++ b/partials/_hero.scss
@@ -1,30 +1,24 @@
 #hero {
+  color: $white-color;
   position: relative;
+  height: 100vh;
   background: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(255, 255, 255, 0.1) 100%
+      rgba(0, 0, 0, 0.3) 100%
     ),
-    url("../assets/sergey-kotenev-KU7PjmjArlQ-unsplash.jpg");
+    url("../assets/hero-bg.jpg");
   background-size: cover;
-
+  background-position: right 60%;
   .hero-text {
-    height: 100vh;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-
     span {
-      margin-top: 50px;
-      color: $white-color;
-      font-size: 12px;
+      font-size: 0.875rem;
       text-transform: uppercase;
       letter-spacing: 1.2px;
+      margin-top: 50px;
     }
 
     h1 {
-      color: $white-color;
       font-size: 7.5rem;
       font-family: "Clicker Script", cursive;
       font-weight: 700;
@@ -32,22 +26,61 @@
     }
 
     p {
-      color: $white-color;
-      font-size: 14px;
-      line-height: 1.6;
       width: 50%;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
-
-    .btn {
-      color: $text-color-primary;
-      font-size: 1rem;
-      font-weight: 700;
-      background-color: $accent-color;
-      border: none;
-      outline: none;
-      padding: 14px 21px;
-      border-radius: 2.5rem;
+  }
+}
+// ====== Media Query ==========
+@media screen and (max-width: 992px) {
+  #hero {
+    .hero-text {
+      text-align: center;
+      span {
+        display: block;
+        margin-bottom: 1rem;
+      }
+      h1 {
+        line-height: 1;
+        margin-bottom: 1rem;
+      }
+      p {
+        width: 80%;
+        margin: auto;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+}
+// ====== Media Query ==========
+@media screen and (max-width: 768px) {
+  #hero {
+    .hero-text {
+      text-align: center;
+      span {
+        font-size: 0.625rem;
+      }
+      h1 {
+        font-size: 5rem;
+      }
+      p {
+        font-size: 0.625rem;
+        width: 100%;
+        text-align: center;
+      }
+    }
+  }
+}
+// ====== Media Query ==========
+@media screen and (max-width: 548px) {
+  #hero {
+    .hero-text {
+      h1 {
+        font-size: 4rem;
+      }
+      p {
+        width: 100%;
+      }
     }
   }
 }
