--- a/partials/_config.scss
+++ b/partials/_config.scss
@@ -9,7 +9,10 @@
 $primary-color: rgb(96, 56, 9);
 $secondary-color: #b07129;
 $accent-color: rgb(249, 192, 106);
-$background-color: #ffeed8;
+$background--color-primary: #fdfbfa;
+$background-color-secondary: #ffeed8;
 $text-color-primary: rgb(30, 30, 30);
 $text-color-secondary: #707070;
 $white-color: rgb(255, 255, 255);
+$ff-primary: "Playfair Display", serif;
+$ff-secondary: "Clicker Script", cursive;
