--- a/partials/_hero.scss
+++ b/partials/_hero.scss
@@ -20,7 +20,7 @@
 
     h1 {
       font-size: 7.5rem;
-      font-family: "Clicker Script", cursive;
+      font-family: $ff-secondary;
       font-weight: 700;
       line-height: 1.4;
     }
