--- a/partials/_menu.scss
+++ b/partials/_menu.scss
@@ -1,7 +1,9 @@
 #menu {
-  width: 80%;
+  width: 100%;
   margin: auto;
   .menu-items {
+    width: 80%;
+    margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 3rem;
@@ -49,7 +51,9 @@
 }
 @media screen and (max-width: 992px) {
   #menu {
-    width: 100%;
+    .menu-items {
+      width: 100%;
+    }
   }
 }
 @media screen and (max-width: 768px) {
