--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,3 +6,5 @@
 @import "../partials/menu";
 @import "../partials/about";
 @import "../partials/contacts";
+@import "../partials/gallery";
+@import "../partials/footer";
