--- a/partials/_about.scss
+++ b/partials/_about.scss
@@ -14,7 +14,6 @@
         img {
           width: 100%;
           height: 100vh;
-          object-fit: cover;
           object-position: 0, 0;
         }
       }
@@ -30,9 +29,9 @@
         }
         h2 {
           font-size: 4rem;
-          margin-bottom: 1rem;
-          font-family: "Clicker Script", cursive;
+          font-family: $ff-secondary;
           line-height: 1;
+          margin-bottom: 1rem;
         }
         .bar {
           display: block;
