--- a/partials/_general.scss
+++ b/partials/_general.scss
@@ -4,13 +4,14 @@ html {
 }
 body {
   color: $text-color-primary;
-  font-family: "Playfair Display", serif;
+  font-family: $ff-primary;
   font-weight: 400;
-  background-color: $background-color;
+  background-color: $background--color-primary;
 }
 img {
-  // display: block;
+  display: block;
   width: 100%;
+  object-fit: cover;
 }
 ul {
   list-style-type: none;
@@ -29,12 +30,25 @@ p {
   line-height: 1.6;
   margin-bottom: 1rem;
 }
+
+h1 {
+  font-size: 7.5rem;
+  font-family: $ff-secondary;
+  font-weight: 700;
+  line-height: 1.4;
+}
 h2 {
   color: $text-color-primary;
   font-size: 2.25rem;
   font-weight: 700;
 }
 /////////////////////////// GENERAL STYLE
+.logo {
+  color: $white-color;
+  font-size: 35px;
+  font-family: $ff-secondary;
+  font-weight: normal;
+}
 .btn {
   @include button;
 }
@@ -48,8 +62,15 @@ h2 {
   align-items: center;
   justify-content: center;
 }
+.section-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
 .section-pd {
   padding: 5rem 0;
+}
+.section-bg {
+  background-color: $background-color-secondary;
 }
 
 .section-header {
