--- a/partials/_nav.scss
+++ b/partials/_nav.scss
@@ -7,13 +7,6 @@ nav {
   .container {
     justify-content: space-between;
 
-    .logo {
-      color: $white-color;
-      font-size: 35px;
-      font-family: "Clicker Script", cursive;
-      font-weight: normal;
-    }
-
     .nav-link-container {
       .btn-nav-close {
         display: none;
@@ -24,9 +17,9 @@ nav {
 
         .nav-link {
           color: $white-color;
-          font-size: 14px;
+          font-size: 0.875rem;
           font-weight: medium;
-          gap: 2.5px;
+          gap: 0.2em;
           i {
             color: $accent-color;
             transition: all 400ms ease;
@@ -47,7 +40,7 @@ nav {
       .sign-in {
         color: $white-color;
         font-size: 14px;
-        font-weight: medium;
+        font-weight: 500;
         &:hover {
           color: rgba($color: $white-color, $alpha: 0.8);
         }
@@ -75,7 +68,6 @@ nav {
 
         ul {
           flex-direction: column;
-          align-items: center;
           .nav-link {
             opacity: 0;
             transition: all 400ms ease 200ms;
